// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JobStatusTag renders a loading tag 1`] = `
<Tag>
  <span
    className="JobStatusTagContent Loading"
  >
    <Cached />
     
  </span>
  <span>
    Processing
  </span>
</Tag>
`;

exports[`JobStatusTag renders a ready tag 1`] = `
<Tag>
  <span
    className="JobStatusTagContent Ready"
  >
    <CloudUpload />
     
  </span>
  <span>
    Ready to validate
  </span>
</Tag>
`;

exports[`JobStatusTag renders a success tag 1`] = `
<Tag>
  <span
    className="JobStatusTagContent Complete"
  >
    <CheckCircle />
     
  </span>
  <span>
    Complete
  </span>
</Tag>
`;

exports[`JobStatusTag renders an error tag 1`] = `
<Tag>
  <span
    className="JobStatusTagContent Failed"
  >
    <Error />
     
  </span>
  <span>
    Validation Error
  </span>
</Tag>
`;
